# borg-archive

./: .gitignore  README.md  pyproject.toml
example/: example.baz
example/my-dataset/: README.md
src/borg_archive/: __init__.py  cli.py  core.py  exceptions.py  utils.py
src/borg_archive.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/borg_archive_python_working.egg-info/: PKG-INFO  SOURCES.txt
